--- a/src/Tempus.App/src/app.css
+++ b/src/Tempus.App/src/app.css
@@ -22,7 +22,13 @@
   .editor input[type="phone"],
   .editor textarea,
   .editor select {
-    @apply p-1 border text-lg placeholder:text-slate-300 placeholder:italic;
+    @apply p-1 border text-lg placeholder:text-slate-300 placeholder:italic rounded;
+  }
+
+  .editor input[v-invalid],
+  .editor textarea[v-invalid],
+  .editor select[v-invalid] {
+    @apply border-2 border-red-500 bg-red-50/20;
   }
 
   .button.button-success {
